@@ -1,5 +1,7 @@
 *SVN*
 
+* Refactor HasManyThroughAssociation to inherit from HasManyAssociation. Association callbacks and <association>_ids= now work with hm:t. #11516 [rubyruy]
+
 * Ensure HABTM#create and HABTM#build do not load entire association. [Pratik]
 
 * Improve documentation. [Xavier Noria, Jack Danger Canty, leethal]
